[gd_scene load_steps=4 format=3 uid="uid://broxtxrcw2njp"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://b6fsqttsyn2rj" path="res://assets/UI images/dark-dungeon-long-medieval-castle-600nw-2118070751.webp" id="2_ekxnf"]
[ext_resource type="FontFile" uid="uid://b6yroy0bagn58" path="res://assets/UI images/Pixelcraft - Personal Use.ttf" id="3_bqqt6"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.184314)
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 1152.0
offset_bottom = 645.0
texture = ExtResource("2_ekxnf")
expand_mode = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.0
offset_top = -324.0
offset_right = 581.0
offset_bottom = 327.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.4
offset_top = -229.0
offset_right = 239.6
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 91
text = "SNAPSHOT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -80.0
offset_right = 128.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="start_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_normal_color = Color(0.811765, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 40
text = "START GAME"

[node name="exit_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_normal_color = Color(0.811765, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 40
text = "EXIT"

[connection signal="pressed" from="Panel/VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
